✨ feature: 메뉴 및 section state 추가

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import 'css/header.css';
+@import 'css/section.css';
+
 *{
   font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
