✨ feature: contents 임시 구현

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import 'css/header.css';
 @import 'css/section.css';
+@import 'css/contents.css';
 
 *{
   font-family: 'Noto Sans KR', sans-serif;
+}
+
+body {
+  /* margin: 0; */
 }
 
 a {
