--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -10,17 +10,35 @@
 }
 
 .article_main {
+  position: relative;
   height: 100%;
-  width: 70vw;
-  border: 2px solid dimgray;
-}
-
-.article_main > img{
-  object-fit: cover;
+  width: 65vw;
 }
 
 .article_sub {
+  position: relative;
   height: 50%;
-  width: 30vw;
-  border: 2px solid dimgray;
+  width: 35vw;
+}
+
+.article_img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(80%);
+}
+
+.article_title_main{
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  padding: 10px 0;
+}
+
+.article_title{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+	transform: translate( -50%, -50% );
+  color: white;
+	text-align: center;
 }
